# agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
openspec/changes/agent-loop/: design.md  proposal.md
openspec/changes/parallel-agent-execution/: design.md  proposal.md  tasks.md
openspec/specs/agent-loop/: spec.md
openspec/specs/analyze-image-tool/: spec.md
openspec/specs/ask-human-tool/: spec.md
openspec/specs/delegate-tool/: spec.md
openspec/specs/filesystem-sandbox/: spec.md
openspec/specs/http-download-tool/: spec.md
openspec/specs/http-get-tool/: spec.md
openspec/specs/llm-client/: spec.md
openspec/specs/log-scrubbing/: spec.md
openspec/specs/multimodal-conversation/: spec.md
openspec/specs/profile-loader/: spec.md
openspec/specs/read-file-tool/: spec.md
openspec/specs/run-instrumentation/: spec.md
openspec/specs/sandbox-from-profile/: spec.md
openspec/specs/secrets-store/: spec.md
openspec/specs/system-prompt-subagent-injection/: spec.md
openspec/specs/terminal-hitl-handler/: spec.md
src/agent/: __init__.py  client.py  context.py  conversation.py  db.py  hitl.py  logging.py  profile.py  registry.py  run.py  sandbox.py  scheduler.py  schema.py  scrub.py  secrets.py  tool.py  validators.py
tests/: test_agent_repository.py  test_builtin_tools.py  test_context.py  test_conversation.py  test_hitl.py  test_instrumentation.py  test_item_repository.py  test_logging.py  test_loop.py  test_parallel_delegate.py  test_profile.py  test_registry.py  test_sandbox.py  test_schema.py  test_scrub.py  test_secrets.py  test_validators.py
(+98 files in other folders)
