[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maciej Maciaszek" }
]
requires-python = ">=3.14"
dependencies = ["openai>=1.0"]

[tool.uv]
dev-dependencies = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
