[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maciej Maciaszek" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.0",
    "Pillow>=11.0",
    "PyYAML>=6.0",
    "questionary>=2.0",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
