[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maciej Maciaszek" }
]
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.20",
    "httpx>=0.28.1",
    "openai>=1.0",
    "Pillow>=11.0",
    "PyYAML>=6.0",
    "questionary>=2.0",
    "rich>=14.3.3",
]

[tool.uv]
dev-dependencies = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
